--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>podd.io</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
   </head>
@@ -13,7 +13,8 @@
   <!-- APP SHELL -->
   <div class="shell">
 
-    <div class="home">
+<!-- CUSTOMER HOME -->
+    <div class="customer-home">
       <!-- HEADER -->
       <div class="header">
         <div class="customer-type human">
@@ -25,7 +26,7 @@
         <h1>podd</h1>
         <div class="line-break">
         </div>
-        <h3>A platform agnostic wallet that doesn't suck.</h3><h3> Read more...</h3>
+        <h3>A no charge platform agnostic wallet that doesn't suck. Podd brings online shopping to bricks and mortar. Find items immediately, no more paper reciepts and never stand in line again with self checkout baked in.</h3><h3> Read more...</h3>
       </div>
       <!-- CURRENT -->
       <div class="current">
@@ -34,14 +35,37 @@
           Go Shopping.
         </div>
       </div>
+      <!-- CLOSEST STORES -->
+      <div class="nearby">
+        <div class="nearby-store">
+          <div class="name"></div>
+          <div class="address"></div>
+          <div class="distance"></div>
+        </div>
+      </div>
 
     </div>
 
+<!-- MERCHANT HOME -->
+<div class="merchant-home">
+  <!-- HEADER -->
+  <div class="header">
+    <div class="customer-type human">
+      human
+    </div>
+    <div class="customer-type merchant">
+      merchant
+    </div>
+    <h1>podd</h1>
+    <div class="line-break">
+    </div>
+    <h3>Offer self checkout and a better shopping experience to your customers while utilizing machine learning to make better purchasing business decisions, and better record keeping.</h3><h3> Read more...</h3>
+  </div>
 
   </div>
 
-  <script src="https://hammerjs.github.io/dist/hammer.js"></script>
-  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script type="text/javascript" src="index.js"></script>
-  </body>
+<script src="https://hammerjs.github.io/dist/hammer.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script type="text/javascript" src="index.js"></script>
+</body>
 </html>
