--- a/client/index.html
+++ b/client/index.html
@@ -13,54 +13,54 @@
   <!-- APP SHELL -->
   <div class="shell">
 
-<!-- CUSTOMER HOME -->
-    <div class="customer-home">
-      <!-- HEADER -->
-      <div class="header">
-        <div class="customer-type human">
-          human
-        </div>
-        <div class="customer-type merchant">
-          merchant
-        </div>
-        <h1>podd</h1>
-        <div class="line-break">
-        </div>
-        <h3>A no charge platform agnostic wallet that doesn't suck. Podd brings online shopping to bricks and mortar. Find items immediately, no more paper reciepts and never stand in line again with self checkout baked in.</h3><h3> Read more...</h3>
-      </div>
-      <!-- CURRENT -->
-      <div class="current">
-        <div class="store"></div>
-        <div class="shop-button">
-          Go Shopping.
-        </div>
-      </div>
-      <!-- CLOSEST STORES -->
-      <div class="nearby">
-        <div class="nearby-store">
-          <div class="name"></div>
-          <div class="address"></div>
-          <div class="distance"></div>
-        </div>
-      </div>
+<div class="header">
+  <div class="customer-type human">
+    human
+  </div>
+  <div class="customer-type merchant">
+    merchant
+  </div>
+</div>
 
+<!-- CUSTOMER HOME -->
+<div class="customer-home">
+  <!-- INTRO -->
+  <div class="intro">
+    <h1>podd</h1>
+    <div class="line-break"></div>
+    <h3>A no charge platform agnostic wallet that doesn't suck. Podd brings online shopping to bricks and mortar. Find items immediately, no more paper reciepts and never stand in line again with self checkout baked in.</h3><h3> Read more...</h3>
+  </div>
+  <!-- CURRENT -->
+  <div class="current">
+    <div class="store"></div>
+    <div class="shop-button">
+      Go Shopping.
     </div>
+  </div>
+  <!-- CLOSEST STORES -->
+  <div class="nearby">
+    <div class="nearby-store">
+      <div class="name"></div>
+      <div class="address"></div>
+      <div class="distance"></div>
+    </div>
+  </div>
+
+</div>
 
 <!-- MERCHANT HOME -->
 <div class="merchant-home">
-  <!-- HEADER -->
-  <div class="header">
-    <div class="customer-type human">
-      human
-    </div>
-    <div class="customer-type merchant">
-      merchant
-    </div>
+  <h1>podd</h1>
+  <div class="line-break"></div>
+
+  <!-- INTRO -->
+  <div class="intro">
     <h1>podd</h1>
     <div class="line-break">
     </div>
     <h3>Offer self checkout and a better shopping experience to your customers while utilizing machine learning to make better purchasing business decisions, and better record keeping.</h3><h3> Read more...</h3>
   </div>
+</div>
 
   </div>
 
