--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,11 @@
   <body>
 
   <!-- APP SHELL -->
-  <div class="shell">
+  <div class="home-button">
+    <img src="/assets/home.png" alt="home button">
+  </div>
+  <div class="shell-border">
+    <div class="shell">
 
 <div class="header">
   <div class="customer-type human">
@@ -28,8 +32,20 @@
   <div class="intro">
     <h1>podd</h1>
     <div class="line-break"></div>
-    <h3>A no charge platform agnostic wallet that doesn't suck. Podd brings online shopping to bricks and mortar. Find items immediately, no more paper reciepts and never stand in line again with self checkout baked in.</h3><h3> Read more...</h3>
+    <!-- WELCOME -->
+    <h3 class='intro-text'>A free digital wallet that doesn't suck. Never wait in line again with self checkout baked in. Sign up in 15 seconds with any bank or credit card account.</h3>
+    <h3 class="read-more"> Read more...</h3>
+    <h3 class="home-more">Podd brings online shopping to bricks and mortar. Find items immediately, no more paper reciepts and never stand in line again with self checkout baked in.</h3>
   </div>
+
+  <!-- AUTHORIZTION -->
+  <div class="location">
+    <h4>Self checkout and store detection are location based. We never save your location or track in the background.</h4>
+
+    <div class="authorize">authorize</div>
+  </div>
+
+
   <!-- CURRENT -->
   <div class="current">
     <div class="store"></div>
@@ -50,18 +66,18 @@
 
 <!-- MERCHANT HOME -->
 <div class="merchant-home">
-  <h1>podd</h1>
-  <div class="line-break"></div>
 
   <!-- INTRO -->
   <div class="intro">
     <h1>podd</h1>
     <div class="line-break">
     </div>
-    <h3>Offer self checkout and a better shopping experience to your customers while utilizing machine learning to make better purchasing business decisions, and better record keeping.</h3><h3> Read more...</h3>
+    <h3 class="intro-text">Offer self checkout and a better shopping experience to your customers. Reduce the number of staff processing transactioins and  utilize machine learning and superior record keeping to make better purchasing and business decisions.</h3>
+    <h3 class="read-more"> Read more...</h3>
   </div>
 </div>
 
+    </div>
   </div>
 
 <script src="https://hammerjs.github.io/dist/hammer.js"></script>
