Have nodemon watch for other files

--- a/dev/html/customer_home.html
+++ b/dev/html/customer_home.html
@@ -4,8 +4,20 @@
   <div class="intro">
     <h1>podd</h1>
     <div class="line-break"></div>
-    <h3>A no charge platform agnostic wallet that doesn't suck. Podd brings online shopping to bricks and mortar. Find items immediately, no more paper reciepts and never stand in line again with self checkout baked in.</h3><h3> Read more...</h3>
+    <!-- WELCOME -->
+    <h3 class='intro-text'>A free digital wallet that doesn't suck. Never wait in line again with self checkout baked in. Sign up in 15 seconds with any bank or credit card account.</h3>
+    <h3 class="read-more"> Read more...</h3>
+    <h3 class="home-more">Podd brings online shopping to bricks and mortar. Find items immediately, no more paper reciepts and never stand in line again with self checkout baked in.</h3>
   </div>
+
+  <!-- AUTHORIZTION -->
+  <div class="location">
+    <h4>Self checkout and store detection are location based. We never save your location or track in the background.</h4>
+
+    <div class="authorize">authorize</div>
+  </div>
+
+
   <!-- CURRENT -->
   <div class="current">
     <div class="store"></div>
