--- a/dev/html/merchant_home.html
+++ b/dev/html/merchant_home.html
@@ -1,13 +1,12 @@
 <!-- MERCHANT HOME -->
 <div class="merchant-home">
-  <h1>podd</h1>
-  <div class="line-break"></div>
 
   <!-- INTRO -->
   <div class="intro">
     <h1>podd</h1>
     <div class="line-break">
     </div>
-    <h3>Offer self checkout and a better shopping experience to your customers while utilizing machine learning to make better purchasing business decisions, and better record keeping.</h3><h3> Read more...</h3>
+    <h3 class="intro-text">Offer self checkout and a better shopping experience to your customers. Reduce the number of staff processing transactioins and  utilize machine learning and superior record keeping to make better purchasing and business decisions.</h3>
+    <h3 class="read-more"> Read more...</h3>
   </div>
 </div>
