--- a/dev/html/open.html
+++ b/dev/html/open.html
@@ -11,4 +11,8 @@
   <body>
 
   <!-- APP SHELL -->
-  <div class="shell">
+  <div class="home-button">
+    <img src="/assets/home.png" alt="home button">
+  </div>
+  <div class="shell-border">
+    <div class="shell">
