--- a/dev/html/customer_home.html
+++ b/dev/html/customer_home.html
@@ -1,37 +1,28 @@
 <!-- CUSTOMER HOME -->
 <div class="customer-home">
+  <!-- CUSTOMER HEADER -->
+  <div class="customer-header">
+    <div class="customer-human-button">
+      human
+    </div>
+    <div class="customer-merchant-button">
+      merchant
+    </div>
+  </div>
   <!-- INTRO -->
   <div class="intro">
     <h1>podd</h1>
     <div class="line-break"></div>
     <!-- WELCOME -->
     <h3 class='intro-text'>A free digital wallet that doesn't suck. Never wait in line again with self checkout baked in. Sign up in 15 seconds with any bank or credit card account.</h3>
-    <h3 class="read-more"> Read more...</h3>
-    <h3 class="home-more">Podd brings online shopping to bricks and mortar. Find items immediately, no more paper reciepts and never stand in line again with self checkout baked in.</h3>
   </div>
 
   <!-- AUTHORIZTION -->
-  <div class="location">
+  <div class="customer-location">
     <h4>Self checkout and store detection are location based. We never save your location or track in the background.</h4>
 
-    <div class="authorize">authorize</div>
+    <div class="customer-authorize">authorize</div>
   </div>
 
-
-  <!-- CURRENT -->
-  <div class="current">
-    <div class="store"></div>
-    <div class="shop-button">
-      Go Shopping.
-    </div>
-  </div>
-  <!-- CLOSEST STORES -->
-  <div class="nearby">
-    <div class="nearby-store">
-      <div class="name"></div>
-      <div class="address"></div>
-      <div class="distance"></div>
-    </div>
-  </div>
 
 </div>
